# math

./: .env.example  .gitignore  CLAUDE.md  Makefile  QUICKSTART.md  README.md  amplify.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json  图形计算器.html
amplify/backend/: backend-config.json
amplify/backend/api/myApi/: api-params.json  myApi-cloudformation-template.json
amplify/backend/function/usersFunction/: usersFunction-cloudformation-template.json
amplify/backend/storage/usersTable/: usersTable-cloudformation-template.json
app/: layout.tsx
docs/: math-menu.txt  new-math.txt
scripts/: setup-kg-pipeline.sh
services/kg-pipeline/: .env.example  README.md  pyproject.toml
services/kg-pipeline/src/: __init__.py  api.py  cli.py  config.py  graph.py  models.py  parser.py
web/: amplifyconfiguration.json  middleware.ts  next.config.js  package.json  tsconfig.json
web/app/: layout.tsx  page.tsx
web/app/api/users/: route.ts
web/app/dashboard/: layout.tsx  page.tsx
web/app/dashboard/orders/: page.tsx
web/app/login/: page.tsx
web/app/subscribe/: layout.tsx  page.tsx
web/app/tools/graphing-calculator/: page.tsx
web/components/: DashboardSidebar.tsx  Footer.tsx  Header.tsx
web/components/cpa/: ALayer.tsx  CLayer.tsx  Calculator.tsx  PLayer.tsx  index.ts
web/components/graphing-calculator/: GraphingCalculator.tsx  index.ts
web/components/graphing-calculator/calculator/: CalculatorEngine.ts  ExpressionDisplay.tsx  (+1 more)
web/components/hero/: CpaHero.tsx
web/lib/: api.ts  oauth.ts  session.ts
web/types/: nerdamer.d.ts
(+14 files in other folders)
